# Terminal

./: .gitignore  CMakeLists.txt  README.md  a.out  display.hpp  fileIO.cpp  fileIO.hpp  file_man.cpp  file_man.hpp  hold.txt  main.cpp  plswork  screen.cpp  screen.hpp  sequence.cpp  sequence.hpp  terminal.hpp  test.cpp  test1.txt
$MYVIMDIR/: .netrwhist
leftover/: fileIO.cpp  fileIO.hpp
old/: display.cpp  display.hpp  files.cpp  files.hpp  main.cpp
old/leftover/: fileIO.cpp  linklist.cpp  linklist.hpp
other/: display.cpp  display.hpp  files.hpp  main.cpp  sequence.hpp  test.txt
scr/: CMakeLists.txt  main.cpp  screen.cpp  sequence.hpp  terminal.cpp  terminal.hpp
src/: CMakeLists.txt  key_codes.hpp  keyhandler.cpp  keyhandler.hpp  main.cpp  screen.cpp  screen.hpp  screen1.cpp  screen1.hpp  sequence.hpp  terminal.cpp  terminal_utility.cpp  terminal_utility.hpp
testing_stuffs/: a.out  behaviour.cpp  behaviour.hpp  cursor_pos.cpp  key_codes.hpp  keys  numb.cpp  number  size  size.cpp  terminal.cpp  testkey.cpp  threads.cpp  tred
